# ship-trajectory-prediction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code_analysis.yml  tests.yml
data/: AIS_status_codes.csv
prediction/data/: __init__.py  code_mappings.py  dataset.py  filter_data.py  loader.py  tsspl_dataset.py  vessel_types.py
prediction/evaluation/: __init__.py  metrics.py
prediction/model/: __init__.py  baseline.py  pssp.py  transformer.py  transformer_trainer.py  trfmls.py  tssp.py  tsspl.py
prediction/notebooks/: dual_linear_autoencoder.ipynb  pkl_cleaner.ipynb  pkl_visualizer.ipynb  similarity_search_prediction.ipynb  track_visualization.ipynb  trajectory_prediction.ipynb  trajectory_resampling.ipynb  transformer.ipynb  trfmls.ipynb
prediction/preprocessing/: __init__.py  ais_status_segmentation.py  outlier_detection.py  pipeline.py  resample_trajectories.py  trajectory_collection.py  trajectory_resampling.py  utils.py
prediction/visualization/: __init__.py  maps.py  trajectories.py
tests/data/: test_dataset.py  test_filter_data.py  test_tsspl_dataset.py
tests/model/: test_pssp.py  test_transformer.py  test_transformer_trainer.py  test_trfmls.py  test_tssp.py  test_tsspl.py
tests/preprocessing/: test_ais_status_segmentation.py  test_outlier_detection.py  test_trajectory_resampling.py  test_utils.py
tests/preprocessing.py/: test_outlier_detection.py  test_resample_trajectories.py  test_utils.py
